# manimations

./: .gitignore  README.md  eq.py  hints.txt  main.py  pyproject.toml
